Update: switch bootloader from sdboot to freedom-u540-c000-bootloader

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "nvidia-dla-blocks"]
 	path = nvidia-dla-blocks
 	url = https://github.com/sifive/nvidia-dla-blocks.git
+[submodule "bootrom/freedom-u540-c000-bootloader"]
+	path = bootrom/freedom-u540-c000-bootloader
+	url = https://github.com/uyiromo/freedom-u540-c000-bootloader
