--- a/Makefile.vc707-u500devkit
+++ b/Makefile.vc707-u500devkit
@@ -9,6 +9,7 @@ export CONFIG := DevKitU500FPGADesign_WithDevKit50MHz
 export BOARD := vc707
 #export BOOTROM_DIR := $(base_dir)/bootrom/sdboot
 export BOOTROM_DIR := $(base_dir)/bootrom/freedom-u540-c000-bootloader
+NUM_CORES := 1
 
 rocketchip_dir := $(base_dir)/rocket-chip
 sifiveblocks_dir := $(base_dir)/sifive-blocks
