--- a/.gitmodules
+++ b/.gitmodules
@@ -4,18 +4,21 @@
 [submodule "sifive-blocks"]
 	path = sifive-blocks
 	url = https://github.com/uyiromo/sifive-blocks.git
-[submodule "fpga-shells"]
-	path = fpga-shells
-	url = https://github.com/uyiromo/fpga-shells.git
 [submodule "nvidia-dla-blocks"]
 	path = nvidia-dla-blocks
 	url = https://github.com/sifive/nvidia-dla-blocks.git
 [submodule "bootrom/freedom-u540-c000-bootloader"]
 	path = bootrom/freedom-u540-c000-bootloader
 	url = https://github.com/uyiromo/freedom-u540-c000-bootloader
-[submodule "sifive-cache"]
-	path = sifive-cache
-	url = https://github.com/uyiromo/block-inclusivecache-sifive
 [submodule "ILA"]
 	path = ILA
 	url = https://github.com/uyiromo/ILA.git
+[submodule "sifive-cache"]
+	path = sifive-cache
+	url = https://github.com/uyiromo/block-inclusivecache-sifive-private.git
+[submodule "fpga-shells"]
+	path = fpga-shells
+	url = https://github.com/uyiromo/fpga-shells-private.git
+[submodule "OpenMPE"]
+	path = OpenMPE
+	url = https://github.com/uyiromo/OpenMPE-private.git
