Enable NVMM emulation

--- a/Makefile.vc707-u500devkit
+++ b/Makefile.vc707-u500devkit
@@ -29,7 +29,6 @@ VSRCS := \
     $(base_dir)/GMulOpt.v \
     $(base_dir)/GModOpt.v
 
-#PATCHVERILOG = ./scripts/connect_nvmmctr_mig.sh
-#PATCHVERILOG = ./scripts/connect_nvmmctr_mig-pcie.sh
+PATCHVERILOG = ./scripts/connect_nvmmctr_mig-pcie.sh
 
 include common.mk
